// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`area layers snapshot check the structure 1`] = `
Array [
  "area-fallback-layer",
  "area-fallback-layer-casing",
  "area-blue-layer",
  "area-blue-layer-casing",
  "area-building",
  "area-building-fill",
  "area-gold-layer",
  "area-gold-layer-casing",
  "area-gray-layer",
  "area-gray-layer-casing",
  "area-green-layer",
  "area-green-layer-casing",
  "area-light-green",
  "area-light-green-casing",
  "area-orange",
  "area-orange-casing",
  "area-pink",
  "area-pink-casing",
  "area-tan",
  "area-tan-casing",
  "area-yellow-layer",
  "area-yellow-layer-casing",
]
`;

exports[`area layers snapshot checks layer 1`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "area",
      ],
      Array [
        "!has",
        "@idly-tag-building",
      ],
    ],
    "id": "area-fallback-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "white",
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 1.75,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 2`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "area",
      ],
      Array [
        "!has",
        "@idly-tag-building",
      ],
    ],
    "id": "area-fallback-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "white",
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 1.5,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 3`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-swimming_pool",
        ],
        Array [
          "==",
          "@idly-tag-leisure",
          "tag-amenity-swimming_pool",
        ],
        Array [
          "==",
          "@idly-tag-natural",
          "tag-natural-water",
        ],
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-aquaculture",
          "tag-landuse-basin",
          "tag-landuse-harbour",
          "tag-landuse-reservoir",
        ],
      ],
    ],
    "id": "area-blue-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#77d3de",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 4`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-swimming_pool",
        ],
        Array [
          "==",
          "@idly-tag-leisure",
          "tag-amenity-swimming_pool",
        ],
        Array [
          "==",
          "@idly-tag-natural",
          "tag-natural-water",
        ],
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-aquaculture",
          "tag-landuse-basin",
          "tag-landuse-harbour",
          "tag-landuse-reservoir",
        ],
      ],
    ],
    "id": "area-blue-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#77d3de",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 5`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-shelter",
        ],
        Array [
          "has",
          "@idly-tag-building",
        ],
      ],
    ],
    "id": "area-building",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "minzoom": 17,
    "paint": Object {
      "line-color": "#e06e5f",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.25,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 6`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-shelter",
        ],
        Array [
          "has",
          "@idly-tag-building",
        ],
      ],
    ],
    "id": "area-building-fill",
    "paint": Object {
      "fill-color": "#e06e5f",
      "fill-opacity": 0.2,
    },
    "source": undefined,
    "type": "fill",
  },
  "priority": 2.25,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 7`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "in",
        "@idly-tag-landuse",
        "tag-landuse-residential",
        "tag-landuse-construction",
      ],
    ],
    "id": "area-gold-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c4bd19",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 8`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "in",
        "@idly-tag-landuse",
        "tag-landuse-residential",
        "tag-landuse-construction",
      ],
    ],
    "id": "area-gold-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c4bd19",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 9`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-parking",
        ],
        Array [
          "all",
          Array [
            "==",
            "@idly-tag-leisure",
            "tag-leisure-pitch",
          ],
          Array [
            "in",
            "@idly-tag-sport",
            "tag-sport-basketball",
            "tag-sport-skateboard",
          ],
        ],
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-railway",
          "tag-landuse-quarry",
        ],
        Array [
          "in",
          "@idly-tag-natural",
          "tag-natural-bare_rock",
          "tag-natural-scree",
          "tag-natural-cave_entrance",
          "tag-natural-glacier",
        ],
      ],
    ],
    "id": "area-gray-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#bbb",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 10`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-amenity",
          "tag-amenity-parking",
        ],
        Array [
          "all",
          Array [
            "==",
            "@idly-tag-leisure",
            "tag-leisure-pitch",
          ],
          Array [
            "in",
            "@idly-tag-sport",
            "tag-sport-basketball",
            "tag-sport-skateboard",
          ],
        ],
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-railway",
          "tag-landuse-quarry",
        ],
        Array [
          "in",
          "@idly-tag-natural",
          "tag-natural-bare_rock",
          "tag-natural-scree",
          "tag-natural-cave_entrance",
          "tag-natural-glacier",
        ],
      ],
    ],
    "id": "area-gray-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#bbb",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 11`] = `
Object {
  "layer": Object {
    "filter": Array [
      "any",
      Array [
        "all",
        Array [
          "has",
          "@idly-tag-natural",
        ],
        Array [
          "!in",
          "@idly-tag-natural",
          "tag-natural-beach",
          "tag-natural-sand",
          "tag-natural-scrub",
          "tag-natural-water",
          "tag-natural-bare_rock",
          "tag-natural-scree",
          "tag-natural-cave_entrance",
          "tag-natural-glacier",
        ],
      ],
      Array [
        "all",
        Array [
          "has",
          "@idly-tag-landuse",
        ],
        Array [
          "!in",
          "@idly-tag-landuse",
          "tag-landuse-aquaculture",
          "tag-landuse-basin",
          "tag-landuse-harbour",
          "tag-landuse-reservoir",
          "tag-landuse-residential",
          "tag-landuse-construction",
          "tag-landuse-railway",
          "tag-landuse-quarry",
          "tag-landuse-cemetery",
          "tag-landuse-orchard",
          "tag-landuse-meadow",
          "tag-landuse-farm",
          "tag-landuse-farmland",
          "tag-landuse-retail",
          "tag-landuse-commercial",
          "tag-landuse-landfill",
          "tag-landuse-military",
          "tag-landuse-industrial",
          "tag-landuse-farmyard",
        ],
      ],
      Array [
        "in",
        "@idly-tag-leisure",
        "tag-leisure-nature_reserve",
        "tag-leisure-park",
      ],
      Array [
        "all",
        Array [
          "==",
          "@idly-tag-leisure",
          "tag-leisure-pitch",
        ],
        Array [
          "!in",
          "@idly-tag-sport",
          "tag-sport-basketball",
          "tag-sport-skateboard",
        ],
      ],
    ],
    "id": "area-green-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#8cd05f",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 12`] = `
Object {
  "layer": Object {
    "filter": Array [
      "any",
      Array [
        "all",
        Array [
          "has",
          "@idly-tag-natural",
        ],
        Array [
          "!in",
          "@idly-tag-natural",
          "tag-natural-beach",
          "tag-natural-sand",
          "tag-natural-scrub",
          "tag-natural-water",
          "tag-natural-bare_rock",
          "tag-natural-scree",
          "tag-natural-cave_entrance",
          "tag-natural-glacier",
        ],
      ],
      Array [
        "all",
        Array [
          "has",
          "@idly-tag-landuse",
        ],
        Array [
          "!in",
          "@idly-tag-landuse",
          "tag-landuse-aquaculture",
          "tag-landuse-basin",
          "tag-landuse-harbour",
          "tag-landuse-reservoir",
          "tag-landuse-residential",
          "tag-landuse-construction",
          "tag-landuse-railway",
          "tag-landuse-quarry",
          "tag-landuse-cemetery",
          "tag-landuse-orchard",
          "tag-landuse-meadow",
          "tag-landuse-farm",
          "tag-landuse-farmland",
          "tag-landuse-retail",
          "tag-landuse-commercial",
          "tag-landuse-landfill",
          "tag-landuse-military",
          "tag-landuse-industrial",
          "tag-landuse-farmyard",
        ],
      ],
      Array [
        "in",
        "@idly-tag-leisure",
        "tag-leisure-nature_reserve",
        "tag-leisure-park",
      ],
      Array [
        "all",
        Array [
          "==",
          "@idly-tag-leisure",
          "tag-leisure-pitch",
        ],
        Array [
          "!in",
          "@idly-tag-sport",
          "tag-sport-basketball",
          "tag-sport-skateboard",
        ],
      ],
    ],
    "id": "area-green-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#8cd05f",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 13`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "in",
        "@idly-tag-landuse",
        "tag-landuse-cemetery",
        "tag-landuse-orchard",
        "tag-landuse-meadow",
        "tag-landuse-farm",
        "tag-landuse-farmland",
      ],
    ],
    "id": "area-light-green",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c7d3a0",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 14`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "in",
        "@idly-tag-landuse",
        "tag-landuse-cemetery",
        "tag-landuse-orchard",
        "tag-landuse-meadow",
        "tag-landuse-farm",
        "tag-landuse-farmland",
      ],
    ],
    "id": "area-light-green-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c7d3a0",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 15`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-retail",
          "tag-landuse-commercial",
          "tag-landuse-landfill",
          "tag-landuse-military",
        ],
        Array [
          "has",
          "@idly-tag-military",
        ],
      ],
    ],
    "id": "area-orange",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#d6881a",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 16`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "in",
          "@idly-tag-landuse",
          "tag-landuse-retail",
          "tag-landuse-commercial",
          "tag-landuse-landfill",
          "tag-landuse-military",
        ],
        Array [
          "has",
          "@idly-tag-military",
        ],
      ],
    ],
    "id": "area-orange-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#d6881a",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 17`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-landuse",
          "tag-landuse-industrial",
        ],
        Array [
          "==",
          "@idly-tag-power",
          "tag-power-plant",
        ],
      ],
    ],
    "id": "area-pink",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#e4a4f5",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 18`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-landuse",
          "tag-landuse-industrial",
        ],
        Array [
          "==",
          "@idly-tag-power",
          "tag-power-plant",
        ],
      ],
    ],
    "id": "area-pink-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#e4a4f5",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 19`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "==",
        "@idly-tag-landuse",
        "tag-landuse-farmyard",
      ],
    ],
    "id": "area-tan",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#f5dcba",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 20`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "==",
        "@idly-tag-landuse",
        "tag-landuse-farmyard",
      ],
    ],
    "id": "area-tan-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#f5dcba",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 21`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-sport",
          "tag-sport-beachvolleyball",
        ],
        Array [
          "in",
          "@idly-tag-natural",
          "tag-natural-beach",
          "tag-natural-sand",
          "tag-natural-scrub",
        ],
        Array [
          "in",
          "@idly-tag-amenity",
          "tag-amenity-childcare",
          "tag-amenity-kindergarten",
          "tag-amenity-school",
          "tag-amenity-college",
          "tag-amenity-university",
        ],
      ],
    ],
    "id": "area-yellow-layer",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#ffff94",
      "line-opacity": 1,
      "line-width": 1,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;

exports[`area layers snapshot checks layer 22`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "$type",
        "Polygon",
      ],
      Array [
        "any",
        Array [
          "==",
          "@idly-tag-sport",
          "tag-sport-beachvolleyball",
        ],
        Array [
          "in",
          "@idly-tag-natural",
          "tag-natural-beach",
          "tag-natural-sand",
          "tag-natural-scrub",
        ],
        Array [
          "in",
          "@idly-tag-amenity",
          "tag-amenity-childcare",
          "tag-amenity-kindergarten",
          "tag-amenity-school",
          "tag-amenity-college",
          "tag-amenity-university",
        ],
      ],
    ],
    "id": "area-yellow-layer-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#ffff94",
      "line-offset": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            4,
          ],
          Array [
            18,
            8,
          ],
          Array [
            22,
            21,
          ],
        ],
      },
      "line-opacity": Object {
        "base": 0.2,
        "stops": Array [
          Array [
            16,
            0.6,
          ],
          Array [
            18,
            0.3,
          ],
          Array [
            22,
            0.4,
          ],
        ],
      },
      "line-width": Object {
        "base": 4,
        "stops": Array [
          Array [
            16,
            8,
          ],
          Array [
            18,
            16,
          ],
          Array [
            22,
            40,
          ],
        ],
      },
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2,
  "selectable": true,
}
`;
